--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -13,6 +13,7 @@ jobs:
           python-version: 3.10.6
           cache: 'pip'
       - name: Install dependencies
-        run: pip install gpxpy
+        run: |
+          pip install -r requirements.txt
       - name: Run
         run: python merge.py
