--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -10,10 +10,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.10.5
+          python-version: 3.10.6
           cache: 'pip'
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run
         run: python merge.py
